// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Renders properly with props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    city="Barcelona"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "bsClass": "page-header",
      "children": Array [
        <Glyphicon
          bsClass="glyphicon"
          glyph="grain"
        />,
        " ",
        "Barcelona",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "bsClass": "glyphicon",
          "glyph": "grain",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
      "Barcelona",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "bsClass": "page-header",
        "children": Array [
          <Glyphicon
            bsClass="glyphicon"
            glyph="grain"
          />,
          " ",
          "Barcelona",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "bsClass": "glyphicon",
            "glyph": "grain",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
        "Barcelona",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header Renders properly without props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    city={undefined}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "bsClass": "page-header",
      "children": Array [
        <Glyphicon
          bsClass="glyphicon"
          glyph="grain"
        />,
        " ",
        "Weather App",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "bsClass": "glyphicon",
          "glyph": "grain",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      " ",
      "Weather App",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "bsClass": "page-header",
        "children": Array [
          <Glyphicon
            bsClass="glyphicon"
            glyph="grain"
          />,
          " ",
          "Weather App",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "bsClass": "glyphicon",
            "glyph": "grain",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        " ",
        "Weather App",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
